--- a/styles/main.css
+++ b/styles/main.css
@@ -180,7 +180,7 @@ a.nav-active {
 }
 .parallax-2 {
     width: 100%;
-    background: url("../img/guitar.jpg") fixed 100%;
+    background: url("../img/Guitar.jpg") fixed 100%;
 }
 @media only screen and (min-width: 768px) {
     /*-- Laptop --*/
